# cpp-embedded-rc

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
Scripts/CI/Conan/: build.py
Scripts/CI/Travis/: install.sh  run.sh
Scripts/CMake/: Conan.cmake  Tests.cmake
Sources/: CMakeLists.txt
Sources/RC/: CMakeLists.txt  rc.cpp  rc.hpp  rcistream.cpp  rcstreambuf.cpp
Sources/RC/tests/: CMakeLists.txt  main.cpp
Sources/RC/tests/Exists/: exists.cpp  test.cmake
Sources/RC/tests/IStream/: istream.cpp  test.cmake
Sources/RC/tests/List/: list.cpp  test.cmake
Sources/RC/tests/RegisterResource/: register_resource.cpp  test.cmake
Sources/RC/tests/Streambuf/: streambuf.cpp  test.cmake
Sources/RCGenerator/: CMakeLists.txt  generator.cpp  generator.hpp  io.cpp  io.hpp  main.cpp  utils.hpp
Sources/RCGenerator/CMake/rc/: generate.cmake
Sources/RCTest/: CMakeLists.txt  main.cpp
Sources/RCTestConanPackage/: CMakeLists.txt  conanfile.py  main.cpp
